<resources>
    <string name="app_name">CleanDealStore</string>
    <string name="phone_mask">+7(_ _ _)_ _ _-_ _-_ _</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incorrect_phone_number">Некорректный номер телефона</string>
    <string name="incorrect_password">Некорректный пароль</string>
    <string name="last_name">Фамилия</string>
    <string name="name">Имя</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="registrate">ЗАРЕГЕСТРИРОВАТЬСЯ</string>
    <string name="cannot_be_empty">Поле не может быть пустым</string>
    <string name="password_requirements">Длина пароля не может быть короче 5 символов</string>
    <string name="incorrect_email">Некорректный e-mail</string>
    <string name="incorrect_password_repeat">Пароли не совпадают</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="volume">Объём</string>
    <string name="item_type">Тип</string>
    <string name="manufacturer">Производитель</string>
    <string name="country">Страна</string>
    <string name="hair_type">Тип волос</string>
    <string name="effect">Эффект</string>
    <string name="taste">Вкус</string>
    <string name="use">Использование</string>
    <string name="my_goods">Мои товары</string>
    <string name="added">Добавлено</string>
    <string name="toShoppingCart">В корзину</string>
    <string name="ok">ok</string>
    <string name="enter_count">Введите кол-во</string>
    <string name="cancel">отмена</string>
    <string name="incorrect_goods_count">Некорректное число товара</string>
    <string name="count">Количество:</string>
    <string name="price">Цена:</string>
    <string name="categories">Категории</string>
    <string name="text_catalog">Каталог</string>
    <string name="text_subscription">Подписка</string>
    <string name="one_time_delivery">разовая доставка</string>
    <string name="transition_image_item_info">transition_image_item_info</string>
    <string name="to_subscription">В подписку</string>
    <string name="to_one_time_delivery">в разовую доставку</string>
    <string name="added_to_one_time_delivery">Добавлено в разовую доставку</string>
    <string name="added_to_subscription">Добавлено в подписку</string>
    <string name="go_to">перейти</string>
    <string name="create_order">оформить</string>
    <string name="sum_cost">Суммарная стоимость:</string>
    <string name="filters">Фильтры</string>
    <string name="dim_items">шт.</string>
    <string name="order_with_dotes">Заказать:</string>
    <string name="rest_with_dotes">Осталось:</string>
    <string name="use_with_dotes">Исспользует:</string>
    <string name="dim_people">чел.</string>
    <string name="in_subscription">В подписке</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="delete">Удалить</string>
    <string name="to_one_time_delivery_full">В разовую доставку</string>
    <string name="cancellation">Отмена</string>
    <string name="count_info_for_subscription">Сколько человек будет использовать товар</string>
    <string name="addtitional_info_for_subscription">Необходимо для корректного прогнозирования расхода товара</string>
    <string name="count_info_for_one_time_delivery">Укажите число единиц товара</string>
    <string name="emty_list_in_one_time_delivery">Добавьте товары из каталога</string>
    <string name="emty_list_in_subscription">Добавь товары в подписку прямо сейчас!</string>
    <string name="send_repeat">Отправить повторно</string>
    <string name="approve_code">Код подтверждения</string>
    <string name="code_was_sended_enter_please">На Ваш номер был отправлен код подтверждения, введите его в форму ниже</string>
    <string name="approve">ПОДТВЕРДИТЬ</string>
    <string name="agree_with_rules">Согласитесь с условиями</string>
    <string name="inccorrect_approve_code">Неправильный код подтверждения</string>
    <string name="get_code">Получить код</string>
    <string name="i_agree_with_rules">Внимание! Я ознакомлен и согласен с условиями лицезионного соглашения.</string>
    <string name="by_price">По цене:</string>
    <string name="min">Минимальная:</string>
    <string name="max">Максимальная:</string>
    <string name="apply">Применить</string>
    <string name="registration">Регистация</string>
    <string name="pleas_wait">Пожалуйста, подождите</string>
    <string name="second_name">Фамилия</string>
</resources>
