<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:minWidth="300dp"
    android:theme="@style/AppTheme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:background="?colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/filters"/>
    <TextView
        android:paddingTop="16dp"
        android:id="@+id/by_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="?colorPrimary"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:text="@string/price"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/min_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            android:textSize="14sp"
            android:layout_marginLeft="14dp"
            android:text="@string/min"/>
        <EditText
            android:id="@+id/min_price_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="7"
            android:inputType="numberSigned"
            tools:text="10000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/max_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            android:textSize="14sp"
            android:layout_marginLeft="16dp"
            android:text="@string/max"/>
        <EditText
            android:id="@+id/max_price_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="7"
            tools:text="10000"/>
    </LinearLayout>
    <include android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        layout="@layout/dialog_bottom_buttons"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

</LinearLayout>