<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <ProgressBar
            android:layout_margin="25dp"
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            app:border="false"
            app:shadow="true"
            android:layout_width="@dimen/edit_profile_image_view_size"
            android:layout_height="@dimen/edit_profile_image_view_size"
            android:background="@drawable/oval_shape"/>
        <ImageView
            android:id="@+id/photo_icon_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/vector_photo_black"/>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/last_name_til"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:paddingBottom="8dp">
        <EditText
            android:id="@+id/last_name_et"
            android:hint="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:imeOptions="actionNext"
            android:maxLength="100"
            android:inputType="textCapWords"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/name_til"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:paddingBottom="8dp">
        <EditText
            android:id="@+id/name_et"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:imeOptions="actionNext"
            android:maxLength="100"
            android:inputType="textCapWords"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/second_name_til"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:paddingBottom="8dp"
        android:visibility="gone">
        <EditText
            android:id="@+id/second_name_et"
            android:hint="@string/second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="100"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <View
        android:layout_marginTop="16dp"
        android:layout_below="@+id/weight_parameter_button"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?colorPrimaryDark" />
    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/email_til"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:paddingBottom="8dp">
        <EditText
            android:id="@+id/email_et"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:imeOptions="actionNext"
            android:maxLength="100"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <View
        android:layout_marginTop="16dp"
        android:layout_below="@+id/weight_parameter_button"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?colorPrimaryDark" />
    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/phone_til"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:paddingBottom="8dp">
        <EditText
            android:id="@+id/phone_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textSize="16sp"
            android:imeOptions="actionNext"
            android:maxLength="100"
            android:text="@string/phone_mask"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>